<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ContactActivity">

    <!--add custom action bar-->
    <include
        android:id="@+id/miActionBarContact"
        layout="@layout/actionbar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/predet_margin"
                android:layout_marginLeft="@dimen/predet_margin"
                android:layout_marginTop="@dimen/predet_margin"
                android:layout_marginEnd="@dimen/predet_margin"
                android:layout_marginRight="@dimen/predet_margin"
                android:ems="10"
                android:hint="@string/txtNameContact"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/predet_margin"
                android:layout_marginLeft="@dimen/predet_margin"
                android:layout_marginTop="@dimen/predet_margin"
                android:layout_marginEnd="@dimen/predet_margin"
                android:layout_marginRight="@dimen/predet_margin"
                android:ems="10"
                android:hint="@string/txtMailContact"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etSubject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/predet_margin"
                android:layout_marginLeft="@dimen/predet_margin"
                android:layout_marginTop="@dimen/predet_margin"
                android:layout_marginEnd="@dimen/predet_margin"
                android:layout_marginRight="@dimen/predet_margin"
                android:ems="10"
                android:hint="@string/txtMailSubject"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/predet_margin"
                android:layout_marginLeft="@dimen/predet_margin"
                android:layout_marginTop="@dimen/predet_margin"
                android:layout_marginEnd="@dimen/predet_margin"
                android:layout_marginRight="@dimen/predet_margin"
                android:ems="10"
                android:hint="@string/txtMailMessage"
                android:inputType="textMultiLine"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnSendEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/predet_margin"
                android:layout_marginLeft="@dimen/predet_margin"
                android:layout_marginEnd="@dimen/predet_margin"
                android:layout_marginRight="@dimen/predet_margin"
                android:layout_marginBottom="16dp"
                android:text="@string/btnSendMessage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
